--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,21 +10,32 @@
   <body>
     <header>
       <img src="images/icon.png" class="icon" />
+      <div id="address-box">
       <h1>Koala Holla</h1>
       <h3>1976 Llama Comma Drive</h2>
-      <h3>Walla Walla, WA</h2>
+      <h3>Walla Walla, WA</h3>
+      </div>
     </header>
     <section id="addKoala">
       <h2>Add Koala</h2>
       <input type="text" id="nameIn" value="" placeholder="Name">
       <input type="text" id="ageIn" value="" placeholder="Age">
-      <input type="text" id="genderIn" value="" placeholder="Gender">
-      <input type="text" id="readyForTransferIn" value="" placeholder="Transfer">
+      <select id="genderIn">
+        <option value ="">Select gender</option>
+        <option value ="M">M</option>
+        <option value ="F">F</option>
+        <option value ="X">X</option>
+      </select> 
+      <select id="readyForTransferIn">
+        <option value ="">Transfer ready?</option>
+        <option value ="true">true</option>
+        <option value ="false">false</option>
+      </select>
       <input type="text" id="notesIn" value="" placeholder="Notes">
       <button type="button" id="addButton">Add Koala</button>
     </section>
     <section>
-      <h2>All Koalas</h2>
+      <h2 id="all-koalas">All Koalas</h2>
       <table>
         <thead>
           <tr>
