updated to twee colors and buttons

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -18,6 +18,7 @@
     </header>
     <section id="addKoala">
       <h2>Add Koala</h2>
+      <div id="inputs-box">
       <input type="text" id="nameIn" value="" placeholder="Name">
       <input type="text" id="ageIn" value="" placeholder="Age">
       <select id="genderIn">
@@ -33,6 +34,7 @@
       </select>
       <input type="text" id="notesIn" value="" placeholder="Notes">
       <button type="button" id="addButton">Add Koala</button>
+    </div>
     </section>
     <section>
       <h2 id="all-koalas">All Koalas</h2>
