--- a/server/public/index.html
+++ b/server/public/index.html
@@ -46,7 +46,7 @@
             <th>Gender</th>
             <th>Ready for Transfer</th>
             <th>Notes</th>
-            <th>Mark Ready</th>
+            <th>Change readiness</th>
             <th>Remove</th>
           </tr>
         </thead>
